--- a/filesharing/app/templates/home.html
+++ b/filesharing/app/templates/home.html
@@ -5,7 +5,7 @@
 <div class="row justify-content-center">
 
   <div class="col-lg-9 justify-content-center">
-    <h1 class="text-center">Save your files and play with html</h1> 
+    <h1 class="text-center">Share your files and play with html</h1> 
 
   </div>
 </div>
