--- a/filesharing/app/templates/play.html
+++ b/filesharing/app/templates/play.html
@@ -10,10 +10,10 @@
         {% else %}
             
             <div class="col-lg-4 col-md-6 col-8 justify-content-center">
-                <h1 class="text-center">Give me some html</h1> 
-                    <form method="GET">
-                        <input type="text" class="form-control mb-1" name="xss" placeholder="html">
-                        <button type="submit" class="btn btn-lg btn-primary btn-block">Submit</button>
+                <h1 class="text-center my-2">Give me some html</h1> 
+                    <form method="GET" class="mt-4">
+                        <input type="text" class="form-control mb-1 my-2" name="xss" placeholder="html">
+                        <button type="submit" class="btn btn-lg btn-primary btn-block my-2">Submit</button>
                     </form>
                 </div>
             </div>
